fix - increase header z-index value and change search form background-color when focused/hovered

--- a/src/components/Header/SearchBar/SearchForm/searchForm.scss
+++ b/src/components/Header/SearchBar/SearchForm/searchForm.scss
@@ -29,5 +29,6 @@
   &:focus-within {
     opacity: 1;
     cursor: pointer;
+    background-color: rgb(243, 244, 246);
   }
 }
