--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -11,4 +11,5 @@
   left: 0;
   box-shadow: var(--box-shadow-light);
   background-color: var(--background-color);
+  z-index: 10;
 }
